fixing the file formats on the bulk download zip, and adding the missing content and email speaker endpoints
